# renovate-test

./: pyproject.toml
.github/: renovate.json5
