[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "renovate-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "click>=7",
  "django>=4.2",
]

[project.optional-dependencies]
test = [
  "pytest==8.4.2",
]

[dependency-groups]
dev = [
  "tox==4.45.0",
]
