[build-system]
requires = ["uv_build>=0.6,<1"]
build-backend = "uv_build"

[project]
name = "renovate-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "click>=7",
  "django>=5.2,<6",
  "httpx",
]

[project.optional-dependencies]
test = [
  "pytest==8.0.0",
]

[dependency-groups]
dev = [
  "tox==4.0.0",
]
