[build-system]
requires = ["uv_build>=0.10.7,<1"]
build-backend = "uv_build"

[project]
name = "renovate-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "click>=7.1.2",
  "django>=4.2.28,<5",
  "httpx",
]

[project.optional-dependencies]
test = [
  "pytest==8.4.2",
]

[dependency-groups]
dev = [
  "tox==4.46.3",
]
